--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo-List</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -27,7 +27,7 @@
                 <button onclick="newedit()" id="newedit" class="btn btn-outline-success"><i class="bi bi-pencil-square"></i></button>
                 <button onclick="clearall()" class="btn btn-outline-danger "><i class="bi bi-trash3 "></i></button>
             </div>
-            <table  id="display" border="5px" border-radio="10%" >
+            <table  id="display" border="1px" border-radio="1%" >
             
             </table>
 
